namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cubepage
  labels:
    name: cubepage
