deploy-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cubepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cubepage
  annotations:
  creationTimestamp: null
  labels:
    io.kompose.service: cubepage
  name: cubepage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cubepage
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: cubepage
    spec:
      containers:
        - image: commonsensingacrprod.azurecr.io/cubepage:20230328.2
          imagePullPolicy: Always
          name: cubepage
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: cubepage
  labels:
    io.kompose.service: cubepage
  name: cubepage
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    io.kompose.service: cubepage
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cubepage
  namespace: cubepage
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/health-probe-hostname: "prod.cubepage.csopenportal.co.uk"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: dns01
spec:
  rules:
  - host: prod.cubepage.csopenportal.co.uk
    http:
      paths:
      - backend:
          service:
            name: cubepage
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - prod.cubepage.csopenportal.co.uk
    secretName: ssl-prod-cubepage-csopenportal-co-uk-tls
